# LearnOpenGL

./: .gitignore  CMakeLists.txt  DrawBase.h  Hello3D.cpp  Hello3D.h  HelloShader.cpp  HelloShader.h  HelloTexture.cpp  HelloTexture.h  HelloTransform.cpp  HelloTransform.h  HelloTriangle.cpp  HelloTriangle.h  README.md  glad.c  hellowindow.cpp  main.cpp
res/: textureFragment.glsl
res/shader/: hello3DVertex.glsl  transformVertex.glsl
utils/: Shader.cpp  Shader.h
